<resources>
<string name="app_name">SM Helper</string>
<string name="title_activity_main">Scripture Mastery Helper</string>
<string name="mnuIncreaseLevel">Next Level</string>
<string name="mnuStartRoutine">New Routine</string>
<string name="mnuContinueRoutine">Continue</string>
<string name="mnuRoutine">View Routine</string>
<string name="mnuNewPassage">Add Passage</string>
<string name="txtPassageHint">Passage text</string>
<string name="btnSave">Add Passage</string>
<string name="spnGroupPrompt">Choose a group</string>
<string name="txtNewGroupHint">Group name</string>
<string name="new_group">Create new group</string>
<string name="txtTitle">Passage title</string>
<string name="noGroupError">You must include a group name.</string>
<string name="noTitleError">You must include a title.</string>
<string name="noPassageError">You must include text to be memorized.</string>
<string name="passageAdded">Passage added successfully.</string>
<string name="delete">Delete</string>
<string name="passage_deleted">Passage deleted successfully.</string>
<string name="group_deleted">Group deleted successfully.</string>
<string name="newPassageLabel">Add New Passage</string>
<string name="mnuDone">Done</string>
<string name="progressDialog">How well do you know this passage now?</string>
<string-array name="progress">
    <item>Memorized</item>
    <item>Partially memorized</item>
    <item>Mastered</item>
</string-array>
<string name="routineDialog">Routine</string>
<string name="keywordLabel">Keyword Practice</string>
<string name="guess_reference">Guess the Reference</string>
<string name="guess_keyword">Guess the Keywords</string>
<string name="btn_choose">Choose</string>
<string name="wrong_reference">Incorrect, try again.</string>
<string name="right_reference">Correct!</string>
<string name="pref_keywords">Practice Keywords</string>
<string name="pref_keywords_summ">Guess the reference before starting a scripture.</string>
<string name="mnu_settings">Settings</string>

<string name="crash_toast_text">SM Helper has crashed unexpectedly</string>
<string name="crash_dialog_title">SM Helper has crashed</string>
<string name="crash_dialog_text">An unexpected error forced the
    application to stop. Please help us fix this by emailing us the error data.</string>
<string name="crash_dialog_comment_prompt">Additional comments (optional):</string>
<string name="crash_dialog_ok_toast">Thank you!</string>
<string name="pref_reporting">Crash Reporting</string>
<string name="pref_reporting_summ">Enable reports by email (restart required).</string>
<string name="mnu_crash">Crash</string>
<string name="dialog_delete">Really delete?</string>
<string name="changelog_full_title">Change Log</string>
<string name="changelog_title">What\'s New</string>
<string name="changelog_ok_button">OK</string>
<string name="changelog_show_full">more...</string>
<string name="about">Version %s<br />Jacob O\'Bryant</string>
<string name="mnu_about">About</string>
<string name="hint_active">Hint is on</string>
<string name="hint_inactive">Hint is off</string>
<string name="mnu_context">Context</string>
<string name="mnu_doctrine">Doctrine</string>
<string name="mnu_application">Application</string>

<string name="pref_levels">Number of Levels</string>
<string name="pref_levels_summ">The number of times a scripture\'s level can be increased</string>
<string-array name="pref_levels_entries">
    <item>1</item>
    <item>2</item>
    <item>3</item>
    <item>4</item>
    <item>5</item>
    <item>6</item>
    <item>7</item>
    <item>8</item>
</string-array>
<string name="pref_levels_default">5</string>

<string name="pref_review">Review Percentage</string>
<string name="pref_review_summ">The amount of mastered scriptures to review in a routine</string>
<string-array name="pref_review_entries">
    <item>20%</item>
    <item>30%</item>
    <item>40%</item>
    <item>50%</item>
    <item>60%</item>
    <item>70%</item>
    <item>80%</item>
</string-array>
<string-array name="pref_review_values">
    <item>.2</item>
    <item>.3</item>
    <item>.4</item>
    <item>.5</item>
    <item>.6</item>
    <item>.7</item>
    <item>.8</item>
</string-array>
<string name="pref_review_default">.4</string>

<string name="help_title">Did you know?</string>
<string name="toggle_help_message">If you\'re having trouble remembering
    a word, you can toggle hint mode by double tapping the screen.</string>
<string name="mnu_open">Open scripture on LDS.org</string>
</resources>
