<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding" >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginLeft="@dimen/margin" >
        <Spinner
            android:id="@+id/spnGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/spnGroupPrompt" />
        <EditText
            android:id="@+id/txtNewGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtNewGroupHint"
            android:singleLine="true"
            android:visibility="gone" />
        <EditText
            android:id="@+id/txtTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtTitle"
            android:singleLine="true" />
        <EditText
            android:id="@+id/txtPassage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="7"
            android:gravity="top"
            android:hint="@string/txtPassageHint" />
        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="btnSaveClick"
            android:text="@string/btnSave" />
    </LinearLayout>
</ScrollView>
